feat(swagger): generate swagger client and write test
