# product-api/handlers/get.go
@@ -14,8 +14,8 @@ import (
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get all records")
-
 	prods := data.GetProducts()
+	rw.Header().Set("Content-Type", "application/json")
 
 	err := data.ToJSON(prods, rw)
 	if err != nil {
@@ -24,7 +24,7 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// swagger:route GET /products/{id} products listSingle
+// swagger:route GET /products/{id} products listSingleProduct
 // Return a list of products from the database
 // responses:
 //	200: productResponse
