# product-api/swagger.yaml
@@ -3,15 +3,18 @@ consumes:
 - application/json
 definitions:
   GenericError:
-    description: GenericError is a generic error message returned by a server
+    description: GenericError GenericError GenericError GenericError GenericError
+      GenericError GenericError GenericError GenericError GenericError GenericError
+      is a generic error message returned by a server
     properties:
       message:
+        description: message
         type: string
         x-go-name: Message
     type: object
-    x-go-package: github.com/mpragnarok/ms-go-youtube/product-api/handlers
+    x-go-package: github.com/mpragnarok/ms-go-youtube/product-api/sdk/models
   Product:
-    description: Product defines the structure for an API product
+    description: Product Product Product defines the structure for an API product
     properties:
       description:
         description: the description for this product
@@ -45,17 +48,21 @@ definitions:
     - price
     - sku
     type: object
-    x-go-package: github.com/mpragnarok/ms-go-youtube/product-api/data
+    x-go-package: github.com/mpragnarok/ms-go-youtube/product-api/sdk/models
   ValidationError:
-    description: ValidationError is a collection of validation error messages
+    description: ValidationError ValidationError ValidationError ValidationError ValidationError
+      ValidationError ValidationError ValidationError ValidationError ValidationError
+      ValidationError is a collection of validation error messages
     properties:
       messages:
+        description: messages
         items:
           type: string
         type: array
         x-go-name: Messages
     type: object
-    x-go-package: github.com/mpragnarok/ms-go-youtube/product-api/handlers
+    x-go-package: github.com/mpragnarok/ms-go-youtube/product-api/sdk/models
+host: localhost:9090
 info:
   description: Documentation for Product API
   title: of Product API
@@ -103,13 +110,6 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/Product'
-      - description: The id of the product for which the operation relates
-        format: int64
-        in: path
-        name: id
-        required: true
-        type: integer
-        x-go-name: ID
       responses:
         "201":
           $ref: '#/responses/noContentResponse'
@@ -123,6 +123,14 @@ paths:
     delete:
       description: Update a products details
       operationId: deleteProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "201":
           $ref: '#/responses/noContentResponse'
@@ -134,7 +142,15 @@ paths:
       - products
     get:
       description: Return a list of products from the database
-      operationId: listSingle
+      operationId: listSingleProduct
+      parameters:
+      - description: The id of the product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "200":
           $ref: '#/responses/productResponse'
